<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.github.ruediste.rise</groupId>
		<artifactId>rise-parent</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	<artifactId>sample-app</artifactId>
	<name>rise-sample-app</name>
	<description>sample application</description>

	<pluginRepositories>
		<pluginRepository>
			<id>ossrhsnapshots-plugins</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</pluginRepository>
	</pluginRepositories>
	
	<dependencies>
		<dependency>
			<groupId>com.github.ruediste.rise</groupId>
			<artifactId>framework</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.3</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-jpamodelgen</artifactId>
			<version>4.3.5.Final</version>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-Xms512m</argument>
						<argument>-Xmx512m</argument>
						<argument>-XX:NewRatio=3</argument>
						<argument>-XX:+PrintGCTimeStamps</argument>
						<argument>-XX:+PrintGCDetails</argument>
						<argument>-Xloggc:gc.log</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>com.github.ruediste.rise.sample.front.SampleMain</argument>
					</arguments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.8</source>
					<target>1.8</target>
					<annotationProcessors>
						<annotationProcessor>
							org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor
						</annotationProcessor>
					</annotationProcessors>
					<compilerArgument>-parameters</compilerArgument>
					<testCompilerArgument>-parameters</testCompilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.ruediste.i18n</groupId>
				<artifactId>i18n-maven-plugin</artifactId>
				<version>1.0-SNAPSHOT</version>
				<executions>
					<execution>
						<phase>process-classes</phase>
						<goals>
							<goal>generate-resource-file</goal>
						</goals>
						<configuration>
							<outputFile>${basedir}/src/main/resources/translations/translations.properties</outputFile>
							<basePackages>com.github.ruediste.rise.sample,com.github.ruediste.rise.crud</basePackages>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.github.ruediste.i18n
										</groupId>
										<artifactId>
											i18n-maven-plugin
										</artifactId>
										<versionRange>
											[1.0-SNAPSHOT,)
										</versionRange>
										<goals>
											<goal>
												generate-resource-file
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>